# csv_processing

./: README.md  pyproject.toml  requirements.txt
csv_processor/: cli.py  main.py
csv_processor/core/: aggregation.py  base.py  filter.py  loader.py
csv_processor/utils/: logger.py  printer.py  validation.py
tests/: conftest.py  test_aggregation.py  test_cli.py  test_filter.py  test_loader.py  test_main.py  test_validation.py
